@@ -53,6 +53,7 @@ Version 7.44 - not yet released
 * devices
   - Add driver for Condor 3
   - Add driver for LX Navigation Eos / Era variometers
+  - Add driver for Stratux
   - Flarm: parse flarm error messages (PFLAE) and display them
   - Flarm: add support for PowerFlarm configuration
   - PowerFlarm: make range / vrange configurable for adbs and pcas
